--- a/index.css
+++ b/index.css
@@ -5,8 +5,11 @@
     font-weight: 400;
     font-style: normal;
     font-size: 19px;
+    color:white;
 }
-
+body{
+  background-image: url('./dima-solomin-WNqkaSWnK8Y-unsplash.jpg');
+}
 .section
 {
     display:flex;
@@ -335,7 +338,14 @@ form-input,
   max-width: 100%;
   box-sizing: border-box;
 }
-
+.lowertexting
+{
+  color:rgb(164, 21, 196);
+  font-weight: bold;
+  backdrop-filter: blur(200px);
+  border-radius: 22px;
+  padding:1rem;
+}
 .contact-section {
   width: 90%;
   padding: 1rem;
